--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -1,3 +1,5 @@
+@import 'common.variables';
+
 %clearfix {
     &::before,
     &::after {
@@ -55,7 +57,7 @@ body {
     background: $e5;
 }
 
-@media only screen and (max-width: 765px) {
+@include mobile {
     body{
         background: $white;
         display: flex;
