update nav styles

--- a/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
@@ -122,7 +122,7 @@
             }
             .sign-in-nav-btn {
                 margin: 15px 20px;
-                @media(max-width: 767px){
+                @include mobile {
                   margin: 0;
                 }
                 .link-name {
