--- a/packages/openneuro-app/src/sass/crn_app/_common.modals.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.modals.scss
@@ -516,6 +516,19 @@ div.rt-resizable-header-content {
   }
 }
 
+.mobile-dropdown {
+  text-transform: capitalize;
+  margin: 5px 0px;
+  width: 210px;
+  border-radius: 2px;
+  font-size: 18px;
+  font-family: var(--font-family-open);
+  font-weight: lighter;
+  border: 0;
+  background: #fff;
+  box-shadow: inset 0 0 1px 1px $transparent1;
+}
+
 .login-modal {
   div.modal-header {
     background-color: $well-bg;
