remove upload button from mobile navbar

--- a/packages/openneuro-app/src/sass/bootstrap/_dropdowns.scss
+++ b/packages/openneuro-app/src/sass/bootstrap/_dropdowns.scss
@@ -2,6 +2,8 @@
 // Dropdown menus
 // --------------------------------------------------
 
+// mobile media query edits to be maintained when bootstrap removed
+@import '../crn_app/common.variables';
 
 // Dropdown arrow/caret
 .caret {
@@ -72,6 +74,13 @@
   }
 }
 
+@include mobile {
+  .dropdown-menu {
+   a {
+    text-align: center;
+    }
+  }
+}
 // Hover/Focus state
 .dropdown-menu > li > a {
   &:hover,
