add results count to datasets page

--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -225,7 +225,8 @@
   
     @include mobile {
         h2 {
-            padding: 20px 0px;
+            padding: 10px 0px 0px;
+            white-space: nowrap;
         }
       
         h4 {
