reset font sizes for mobile

--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -227,6 +227,7 @@
         h2 {
             padding: 10px 0px 0px;
             white-space: nowrap;
+            font-size: 26px;
         }
       
         h4 {
