--- a/packages/openneuro-app/src/sass/bootstrap/_navs.scss
+++ b/packages/openneuro-app/src/sass/bootstrap/_navs.scss
@@ -18,7 +18,7 @@
 
     > a {
       position: relative;
-      display: block;
+      display: inline-block;
       padding: $nav-link-padding;
       font-weight: 400;
       &:hover,
