add share button

--- a/packages/openneuro-app/src/sass/crn_app/_admin.tools.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_admin.tools.scss
@@ -1,17 +1,16 @@
 .dataset-tools-wrap-admin {
-
     .tool {
         display: block;
         float: left;
         width: auto;
         margin: 3px 0 0 10px;
         overflow: hidden;
-
+        @include mobile {
+            width: 3.5em;
+        }
         .btn-admin.warning {
             padding: 6px 0;
-
             i {
-
                 &.fa-ban,
                 &.fa-check-square-o,
                 &.fa-square-o {
@@ -19,7 +18,6 @@
                     position: relative;
                     top: 0;
                 }
-
             }
         }
     }
