--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -20,18 +20,15 @@ $bootstrap-sass-asset-helper: true;
 @import 'animate/_flippers/flippers';
 @import 'animate/_attention-seekers/flash';
 
-
 //openneuro SASS ================================================================
 @import './crn_app/colors';
 @import './crn_app/theme';
 @import './crn_app/bootstrap.overrides';
 @import './crn_app/elements-wrappers';
 
-
 // draft.js
 @import './draft/draft';
 @import './draft/rich-editor';
-@import '../../node_modules/prismjs/themes/prism-coy';
 
 // papaya asset default
 @import './crn_app/_common.papaya';
@@ -65,207 +62,257 @@ $bootstrap-sass-asset-helper: true;
 @import './crn_app/faq';
 @import './crn_app/api';
 
-
-.logo-text{
-    color: $c-42;
-    font-size: 75px;
-    font-weight: 700;
-    position: relative;
-    line-height:  1em;
-    .logo-end{
-        font-size: 75%;
-        text-transform: uppercase;
-        color: $primary;
-        color: var(--primary);
-        font-weight: 400;
-    }
+.logo-text {
+  color: $c-42;
+  font-size: 75px;
+  font-weight: 700;
+  position: relative;
+  line-height: 1em;
+  .logo-end {
+    font-size: 75%;
+    text-transform: uppercase;
+    color: $primary;
+    color: var(--primary);
+    font-weight: 400;
+  }
 }
 
-.fade-in {@include fadeIn();}
-%slide-down-fast {@include slideInDown($duration: .3s, $delay: 0);}
+.fade-in {
+  @include fadeIn();
+}
+%slide-down-fast {
+  @include slideInDown($duration: 0.3s, $delay: 0);
+}
 
-.slide-in-left {@include slideInLeft();}
-.slide-out-left {@include slideOutLeft();}
-.slide-in-right-fast {@include slideInRightFast();}
-%slide-in-down { @include slideInDown();}
-.flipin-x {@include flipInX();}
-%flash {@include flash();}
-
+.slide-in-left {
+  @include slideInLeft();
+}
+.slide-out-left {
+  @include slideOutLeft();
+}
+.slide-in-right-fast {
+  @include slideInRightFast();
+}
+%slide-in-down {
+  @include slideInDown();
+}
+.flipin-x {
+  @include flipInX();
+}
+%flash {
+  @include flash();
+}
 
 .slide-in-down {
-    @extend %slide-in-down;
+  @extend %slide-in-down;
 }
 
 @include keyframes(spin) {
-    0% {@include transform(rotate(0));}
-    100% {@include transform(rotate(360deg));}
+  0% {
+    @include transform(rotate(0));
+  }
+  100% {
+    @include transform(rotate(360deg));
+  }
 }
 
 @include keyframes(dot) {
-    0% {opacity: 0;}
-    50% {opacity: 0;}
-    100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-
 
 @include keyframes(border-flash) {
-    0% {border: 1px solid $yellow; }
-    50% {border: 1px solid transparent;}
-    100% {border: 1px solid $yellow;}
+  0% {
+    border: 1px solid $yellow;
+  }
+  50% {
+    border: 1px solid transparent;
+  }
+  100% {
+    border: 1px solid $yellow;
+  }
 }
 @include keyframes(background-flash) {
-    0% {background-color: $honey; }
-    50% {background-color: transparent;}
-    100% {background-color: $honey;}
+  0% {
+    background-color: $honey;
+  }
+  50% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: $honey;
+  }
 }
 
 @include keyframes(borderxpand) {
-    0% {
-        width: 0;
-        height: 0;
-    }
-    100% {
-        width: 100%;
-        height: auto;
-    }
+  0% {
+    width: 0;
+    height: 0;
+  }
+  100% {
+    width: 100%;
+    height: auto;
+  }
 }
 
-
 @include keyframes(revealIn) {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @include keyframes(shrink-bounce) {
-    0% {@include transform(scale(1));}
-    33% {@include transform(rscale(.85));}
-    100% {@include transform(rscale(1));}
+  0% {
+    @include transform(scale(1));
+  }
+  33% {
+    @include transform(rscale(0.85));
+  }
+  100% {
+    @include transform(rscale(1));
+  }
 }
 
 @include keyframes(checkbox-check) {
-    0% {
-        @include transform(translate3d(0, 0, 0) rotate(45deg));
-        width: 0;
-        height: 0;
-        border-color: $c-21;
-    }
+  0% {
+    @include transform(translate3d(0, 0, 0) rotate(45deg));
+    width: 0;
+    height: 0;
+    border-color: $c-21;
+  }
 
-    33% {
-        @include transform(translate3d(0, 0, 0) rotate(45deg));
-        width: .2em;
-        height: 0;
-    }
+  33% {
+    @include transform(translate3d(0, 0, 0) rotate(45deg));
+    width: 0.2em;
+    height: 0;
+  }
 
-    100% {
-        @include transform(translate3d(0, -.5em, 0) rotate(45deg));
-        width: .2em;
-        height: .5em;
-        border-color: $c-21;
-    }
+  100% {
+    @include transform(translate3d(0, -0.5em, 0) rotate(45deg));
+    width: 0.2em;
+    height: 0.5em;
+    border-color: $c-21;
+  }
 }
 
 .ellipsis-animation {
-    color: $rock;
-    margin: 0;
-    padding: 4px;
-    font-size: 12px;
+  color: $rock;
+  margin: 0;
+  padding: 4px;
+  font-size: 12px;
 
-    .one,
-    .two,
-    .three {
-        @include animation(dot 1.3s infinite);
-        opacity: 0;
-        font-size: 20px;
-        line-height: 10px;
-    }
+  .one,
+  .two,
+  .three {
+    @include animation(dot 1.3s infinite);
+    opacity: 0;
+    font-size: 20px;
+    line-height: 10px;
+  }
 
-    .one {@include animation-delay(.0s);}
-    .two {@include animation-delay(.2s);}
-    .three {@include animation-delay(.3s);}
+  .one {
+    @include animation-delay(0s);
+  }
+  .two {
+    @include animation-delay(0.2s);
+  }
+  .three {
+    @include animation-delay(0.3s);
+  }
 }
 
-
-
-
-.ds-danger .ellipsis-animation {color: $brand-danger;}
-.ds-warning .ellipsis-animation {color: $brand-warning;}
+.ds-danger .ellipsis-animation {
+  color: $brand-danger;
+}
+.ds-warning .ellipsis-animation {
+  color: $brand-warning;
+}
 
 .icon-ban:after,
 .icon-undo:after,
 .icon-plus:after,
 .icon-minus:after {
-    font-size: 11px;
-    top: -10px;
-    position: relative;
-    right: -2px
+  font-size: 11px;
+  top: -10px;
+  position: relative;
+  right: -2px;
 }
 
 .icon-plus:after {
-    font-size:  9px;
-    content: '\f067';
+  font-size: 9px;
+  content: '\f067';
 }
 
 .icon-minus:after {
-    content: '\f068';
+  content: '\f068';
 }
 
-
 .icon-undo:after {
-    content: '\f0e2';
+  content: '\f0e2';
 }
 
 .icon-ban:after {
-    content: '\f05e';
-    color: $brand-danger;
+  content: '\f05e';
+  color: $brand-danger;
 }
 
 //papaya overrides
 
-.papaya-wrap{
-    margin: auto;
-    max-width: 90%;
-    .papaya-controlbar-label{
-        color: $black;
+.papaya-wrap {
+  margin: auto;
+  max-width: 90%;
+  .papaya-controlbar-label {
+    color: $black;
+  }
+  button {
+    @extend %btn-admin;
+    border-color: $secondary;
+    border-color: var(--secondary);
+    color: $secondary;
+    color: var(--secondary);
+    padding: 5px 2px;
+    height: auto;
+    &:hover {
+      background: $secondary-hover;
+      background: var(--secondary-hover);
+      color: $white;
     }
-    button{
-        @extend %btn-admin;
-        border-color: $secondary;
-        border-color: var(--secondary);
-        color: $secondary;
-        color: var(--secondary);
-        padding: 5px 2px;
-        height: auto;
-        &:hover{
-            background: $secondary-hover;
-            background: var(--secondary-hover);
-            color:$white;
-        }
-    }
+  }
 }
 
 #hidden {
-    display: none;
+  display: none;
 }
 
 .add-btn {
-    font-size: 18px;
-    margin-top: .5em;
+  font-size: 18px;
+  margin-top: 0.5em;
 }
 
 .apps-filter,
-.versions-filter{
- margin: 15px 0;
- z-index: 1000;
+.versions-filter {
+  margin: 15px 0;
+  z-index: 1000;
 }
 
 .generic-error-message {
-    padding: 1rem;
-    border: $coral;
-    color: red;
+  padding: 1rem;
+  border: $coral;
+  color: red;
 }
 
 .padded-message {
-    padding: 1rem;
-    border-radius: 1rem;
-    margin-bottom: 2rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
 }
