Add download progress toast to the native file web downloader.

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -707,6 +707,13 @@ h6 {
   }
 }
 
+.Toastify__toast--default {
+  border-top: 4px solid $c-33;
+  .Toastify__progress-bar {
+    background: $secondary;
+  }
+}
+
 .Toastify__toast--success {
   border-top: 4px solid $success;
 }
